static/css/base.css
html, body {
    height: 100%;
    color: #30362F;
    font-family: 'Concert One', sans-serif;
    margin: 0;
    padding: 0;
}

body {
    background: url('../images/PokeChat-background.jpg')no-repeat center center;
    background-size: cover;
    background-attachment: fixed;
}

hr {
    border-top: 2px dashed #30362F !important;
}

/* Sidebar Layout */
.sidebar {
    width: 200px;
    background-color: #96BDC6;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    padding-top: 20px;
    position: fixed;
}

.pokechat-logo {
    height: 150px;
    width: 150px;
    object-fit: cover;
    border-radius: 50%;
}

.nav {
    width: 63.5px;
}

.nav-link {
    font-size: 28px !important;
    margin: 20px 0;
    text-align: center;
}

.nav-link:hover {
    background-color: #E4E0CF;
    padding: 10px;
    border-radius: 50%;
}

.content {
    margin-left:220px;
    padding: 20px;
}

/* allauth forms */

#accounts {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 20px;
}

.allauth-forms {
    max-width: 800px;
    width: 100%;
    background-color: #96BDC6 !important;
    border-radius: 15px;
    margin-bottom: 20px;
    margin-left: 10px;
    margin-right: 10px;
    padding: 15px;
    align-items: center;
}

.allauth-form-container {
    background-color: #E4E0CF !important;
    border-radius: 15px;
    border: 3px solid #30362F;
    padding: 10px;
    margin: 5px;
}

#allauth-button {
    background-color: #96BDC6;
    font-weight: 600;
}

#allauth-button:hover {
    background-color: #E4E0CF;
    border: 0.5px solid #30362F
}

/* Profile Page */
.profile-header,
.profile-body {
    margin: 0 auto;
    background-color: #96BDC6;
    padding: 20px;
    border-radius: 15px;
    border: 3px solid #30362F;
    width: 80%; 
}

.profile-body {
    margin-top: 25px;
}

.profile-header-container,
.profile-body-container {
    align-items: center;
    background-color: #E4E0CF;
    padding: 10px;
    border-radius: 15px;
    border: 3px solid #30362F;
    width: 100%;
    margin-left: 0 !important;
    margin-right: 0 !important;
}

.profile-image {
    height: 200px;
    width: 200px;
    object-fit: cover;
    border-radius: 50%;
    border: 2.5px solid #30362F;
    margin-left: 70px;
}

.profile-body-container hr {
    margin: 0 auto;
}

.dropdown-menu {
    background-color: #96BDC6 !important;
    border: 2px solid #30362F !important;
    margin-left: 48px !important;
    padding: 10px !important;
}

.dropdown-menu-container {
    background-color: #E4E0CF;
    padding: 10px;
    border-radius: 5%;
    border: 2px solid #30362F;

}

.dropdown-menu-container hr {
    margin: 0 auto;
}

.dropdown-item {
    font-weight: 500 !important;
}

.dropdown-item:hover {
    background-color: #E4E0CF !important;
}

.post-managment-icon {
    color: #30362F;
}

.draft-overlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.5);
    display: flex;
    align-items: center;
    justify-content: center;
    color: #fff;
    font-size: 1.5rem;
    font-weight: bold;
    text-transform: uppercase;
    pointer-events: none;
}

/* Posts */
.feed {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 20px;
}

#posts {
    max-width: 800px;
    width: 100%;
    background-color: #96BDC6 !important;
    border-radius: 15px;
    padding: 20px;
    align-items: center;
    margin: 20px auto;
}

.card-title img {
    border-radius: 50%;
    border: 2px solid #30362F;
    height: 80px;
    width: 80px;
    object-fit: cover;
}

.post-image {
    padding: 5px;
    border-radius: 15px;
}

.card-body {
    flex-grow: 1;
}

/* Ensures the .img-container and .card-body-container are always equal height */
.row.g-0 {
    display: flex; /* Flexbox layout for equal height columns */
    align-items: stretch; /* Ensure the children stretch to the same height */
}

.img-container,
.card-body-container {
    display: flex;
    flex-direction: column;
    justify-content: center !important; /* Ensure content inside is centered */
    height: 100%;
    max-height: 350px;
    background-color: #E4E0CF !important;
    border-radius: 15px;
    border: 3px solid #30362F;
}

.img-container img {
    object-fit: cover;
    height: 100%;
    width: 100%;
    border-radius: 15px;
}

.card-body-container {
    display: flex;
    flex-direction: column;
    height: 100%;
    margin-left: 10px;
}

/* Limit the caption to 2 lines and hide overflow */
.post-caption {
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    max-height: 3em;
    transition: max-height 0.5s ease;
}

/* When expanded, show the full caption */
.post-caption.expanded {
    -webkit-line-clamp: unset;
    max-height: none;
}

/* Style the "Read More" link */
.read-more {
    color: #617557;
    cursor: pointer;
    text-decoration: none;
    font-weight: bold;
}

.read-more:hover {
    text-decoration: underline;
}

.like-button {
    background: none;
    border: none;
    padding: 0;
    margin: 0;
    cursor: pointer;
    outline: none;
}

.like-button i {
    font-size: 24px;
    color: #30362F;
}

.comment-button,
.share-button {
    text-decoration: none;
    font-size: 24px;
    color: #30362F;
    margin-left: 17px;
}

/* Post Comments */
.comments {
    background-color: #E4E0CF;
    max-height: none;
    overflow: visible;
    display: block;
    padding: 10px;
    box-sizing: border-box;
    border-radius: 15px;
    border: 3px solid #30362F;
    width: 100%;
}

.post-comment { 
    background-color: #96BDC6;
    border-radius: 15px;
    border: 2px solid #30362F;
    margin: 5px;
    max-width: 800px;
    width: 100%;
}

.post-comment p,
.post-comment strong,
.post-comment small {
    margin: 5px;
} 

.comment-title img {
    border-radius: 50%;
    border: 2px solid #30362F;
    height: 40px;
    width: 40px;
    object-fit: cover;
    margin: 3px;
}

/* Add post page */
.post-preview {
    background-color: #E4E0CF;
    padding: 10px;
    border-radius: 15px;
    border: 3px solid #30362F;
    width: 50%;
    transition: width 0.3s ease-in-out;
}

#post-preview #posts {
    margin-left: 0;
    margin-top: 20px;
}

#add-post-button,
#preview-post-button {
    background-color: #96BDC6;
    font-weight: bold;
}

#add-post-button:hover,
#preview-post-button:hover {
    background-color: #E4E0CF;
    border: 0.5px solid #30362F;
}

#preview-post-button {
    margin-left: 8px;
}

/* Delete post page */
.delete-post,
.update-post-status {
    background-color: #96BDC6;
    padding: 25px;
    border-radius: 15px;
    border: 3px solid #30362F;
}

.delete-post-container,
.update-post-status-container {
    background-color: #E4E0CF;
    border-radius: 15px;
    border: 3px solid #30362F;
}

.delete-post-container hr,
.update-post-status-container hr {
    margin: 15px auto;
}

.update-post-status-container form {
    margin: 0 auto;
}

/* Form styles */
.add-post-header,
.create-profile-header {
    background-color: #E4E0CF;
    padding: 20px;
    border-radius: 15px;
    border: 3px solid #30362F;
    width: 100%;
}

.add-post,
.create-profile {
    background-color: #96BDC6;
    padding: 20px;
    border-radius: 15px;
    display: flex;
    justify-content: space-between;
    transition: all 0.3s ease-in-out;
}

.form-container {
    background-color: #E4E0CF;
    padding: 10px;
    border-radius: 15px;
    border: 3px solid #30362F;
    width: 100%;
    transition: width 0.3s ease-in-out;
}

#form-button {
    background-color: #96BDC6;
    font-weight: 600;
}

#form-button:hover {
    background-color: #E4E0CF;
    border: 0.5px solid #30362F
}

.comment-textarea {
    height: auto;
    resize: vertical;
    overflow-y: hidden;
    min-height: 1.5rem;
    width: 98% !important;
    margin: 10px auto !important;
}

